# ccgw_quad2nurbs

./: CMakeLists.txt  README.md
include/: BsplingCuvApprox.h  CCG_QMS_bsplineTool.h  CCG_QMS_headerTool.h  CCG_QMS_meshOperation.h  CCG_QMS_meshTool.h  CCG_QMS_meshView.h  CCG_QMS_quad2ManifoldSpline.h  NUBE_printInformation.h  NUBE_quadMesh2NURBS_API.h
src/: BsplingCuvApprox.cpp  CCG_QMS_bsplineTool.cpp  CCG_QMS_meshOperation.cpp  CCG_QMS_meshTool.cpp  CCG_QMS_meshView.cpp  CCG_QMS_quad2ManifoldSpline.cpp  NUBE_printInformation.cpp  NUBE_quadMesh2NURBS_API.cpp  main.cpp
